* BUG#7817 If a loss requires an end date, the closing reason can only be defined if an end date is defined.
* BUG#7827 Load hidden field "Claim" in the loss view form

Version 1.14 - 2017-11-09
* OTH#0000 Add a method to verify a loss before activating it
* BUG#7017 The claims data is now read only if the claim is closed
* BUG#6924 Allow to close a claim by the action menu
* BUG#6573 Fix crash related to the attempt to display losses from party synthesis

Version 1.12 - 2017-04-28
* FEA#0000 Add closing reason configuration on losses
* FEA#0000 Add user warning if claim's declaration date is prior to loss start date
* FEA#0000 Add user error if claim's declaration date is posterior to current date
* FEA#0000 Add covered_element field on services
* FEA#0000 Add claimant in default search for claims
* FEA#0000 Check for possible duplicates claim losses
* FEA#0000 Add a status field on claim losses
* FEA#0000 Add claim related insurer delegation levels
* FEA#0000 Improve performance and API for delivering a loss

Version 1.10 - 2016-11-02
* FEA#0000 Group claims by status into their respective tabs
* FEA#0000 Add option to automatically deliver benefits
* FEA#0000 Add claim on event log - view event log on claim
* FEA#0000 Add rule engine function to get the sum of all hospitalisation periods

Version 1.8 - 2016-07-06
* FEA#0000 Rework module. Merge with benefit module

Version 1.6 - 2015-12-23
* FEA#0000 Print actions are available on claim

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation