@@ -9,12 +9,13 @@
     <newline/>
     <field name="possible_services"/>
     <newline/>
-    <label name="start_date"/>
-    <field name="start_date"/>
-    <label name="end_date"/>
-    <field name="end_date"/>
     <label name="loss_desc"/>
     <field name="loss_desc"/>
     <label name="event_desc"/>
     <field name="event_desc"/>
+    <label name="start_date"/>
+    <field name="start_date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
+    <field name="with_end_date" invisible="1"/>
 </form>
