@@ -13,5 +13,20 @@ this repository contains the full copyright notices and license terms. -->
             <field name="inherit" ref="process.process_form"/>
             <field name="name">process_form</field>
         </record>
+        <record model="ir.action.keyword" id="act_menu_declare_claim">
+            <field name="keyword">form_action</field>
+            <field name="model">party.synthesis.menu,-1</field>
+            <field name="action" ref="declaration_process_launcher"/>
+        </record>
+        <record model="ir.action.keyword" id="act_start_declaration">
+            <field name="keyword">form_action</field>
+            <field name="model">party.party,-1</field>
+            <field name="action" ref="declaration_process_launcher"/>
+        </record>
+        <record model="ir.action.keyword" id="act_contract_declare_claim">
+            <field name="keyword">form_action</field>
+            <field name="model">contract,-1</field>
+            <field name="action" ref="declaration_process_launcher"/>
+        </record>
     </data>
 </tryton>
